--- a/application/frontend/src/index.css
+++ b/application/frontend/src/index.css
@@ -97,6 +97,7 @@ h3{
   max-width: 800px;
   width: 85%;
   margin: 0 auto;
+  padding-top: 30px;
 }
 
 .wide-container{
